# python-ref-to-poetry

./: requirements.txt
.github/: dependabot.yml
inspect_utils/: pyproject.toml
